Update cm-reload.md